2008-03-20  Bernhard Walle <bwalle@suse.de>

	* bump version to 0.1.2
	* add 'nodelete' option
	* implement completion for entries

2008-01-21  Bernhard Walle <bwalle@suse.de>

	* add manpage

2008-01-19  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented reading of the DHCP server (and use it for guessing the
	  TFTP server) from the /var/lib/dhcpcd/dhcpcd-<if>.info file
	* add NEWS file

2008-01-18  Bernhard Walle <bwalle@suse.de>

	* started ChangeLog