@@ -1,53 +1,0 @@
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
-
-AC_PREREQ(2.57)
-# also update USBPROG_VERSION_STRING in usbprog/usbprog.h (for Win32)
-# and win32/installer.nsi if you change the version number here
-AC_INIT(pxe-kexec, 0.1.2, bwalle@suse.de)
-AC_CONFIG_SRCDIR([src/main.cc])
-AC_CONFIG_AUX_DIR(config)
-AC_CONFIG_HEADERS([config.h])
-AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE
-
-
-# Checks for programs.
-AC_PROG_CC
-AC_PROG_CXX
-
-# Checks for libraries.
-
-#
-# CURL
-#
-LIBCURL_CHECK_CONFIG([yes], [], [have_libcurl="yes"], [have_libcurl="no"])
-
-if test "${have_libcurl}" != yes; then
-	AC_MSG_ERROR([libcurl library not found, please install it])
-else
-	CPPFLAGS="$CPPFLAGS $LIBCURL_CPPFLAGS"
-	LIBS="${LIBS} ${LIBCURL}"
-fi
-
-#
-# strptime
-#
-AC_CHECK_FUNCS([strptime])
-
-#
-# readline
-#
-AC_CHECK_LIB([readline], [readline])
-
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-
-
-AC_CONFIG_FILES([Makefile
-                 src/Makefile])
-AC_OUTPUT
-
-
-# vim: set sw=4 ts=4:
