@@ -1,3 +1,7 @@
+2008-05-03  Bernhard Walle <bernhard.walle@gmx.de>
+
+	* switch to cmake
+
 2008-03-20  Bernhard Walle <bwalle@suse.de>
 
 	* bump version to 0.1.2
